Make sure to flush reflows before trying to scroll so that frame coordinates will be up-to-date.  Bug 186149, r=peterv, sr=jst, a=asa